--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,26 @@
-body {
-  background: rgb(222, 220, 218);
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #eeee;
+    background: #121212;
+  }
+
+  a {
+    color: #809fff;
+  }
+}
+
+th,
+td {
+  border: 2px solid #999;
+  text-align: left;
+  padding: 0.5rem;
+}
+
+table {
+  border-spacing: 0;
+  width: 100%;
+  margin: 0 0 1rem;
+  border: 1px solid #bebebe;
+  border-radius: 8px;
+  overflow: hidden;
 }
