--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,10 @@
-@media (prefers-color-scheme: dark) {
-  body {
-    color: #eeee;
-    background: #121212;
-  }
+body {
+  font-family: sans-serif;
+}
 
-  a {
-    color: #809fff;
-  }
+h1 {
+  flex: auto;
+  text-align: center;
 }
 
 th,
@@ -22,6 +20,21 @@ table {
   border-collapse: collapse;
   border: 3px solid;
   margin-bottom: 20px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+thead {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+}
+
+tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
 }
 
 label {
@@ -41,8 +54,8 @@ label {
 }
 
 #salarySum {
-  background-color: #121212;
   width: fit-content;
+  float: left;
 }
 
 input {
