--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,7 +45,7 @@ td {
 
 table {
   table-layout: fixed;
-  width: 100%;
+  width: auto;
   border-collapse: collapse;
   border: 3px solid;
   margin-bottom: 20px;
